# termdash

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: config.toml  prefabs.json
assets/config/: config.toml
assets/worlds/: _default_level.json  silly_sausage.json  tyrus_tester.json
level_data_macros/: Cargo.toml
level_data_macros/src/: lib.rs
src/: camera.rs  config.rs  constants.rs  input.rs  macros.rs  main.rs  paths.rs  player.rs  state.rs  world.rs
src/camera/: camera.rs
src/core/: app_state.rs  camera.rs  collision.rs  constants.rs  mod.rs
src/editor/: inspector.rs  mod.rs  model.rs  refresh.rs  save.rs  selection.rs  window.rs
src/features/: mod.rs
src/features/gameplay/: death.rs  mod.rs
src/features/menu/: mod.rs  resources.rs  systems.rs  ui.rs  ui_helpers.rs
src/features/player/: components.rs  mod.rs  systems.rs
src/features/player/systems/: hazard.rs  mod.rs  movement.rs  physics.rs  (+1 more)
src/features/world/: components.rs  loading.rs  mod.rs  model.rs  queries.rs  registry.rs  solid.rs  visualizer.rs
src/gameplay/: death.rs  mod.rs  orbs.rs  triggers.rs
src/level/: components.rs  load.rs  loading.rs  mod.rs  model.rs  queries.rs  registry.rs  visualizer.rs
src/menu/: mod.rs  resources.rs  systems.rs  ui.rs
src/player/: components.rs  cube.rs  mod.rs  movement.rs  queries.rs  spawn.rs
src/ui/: helpers.rs  mod.rs  model.rs  systems.rs
src/ui/widgets/: modal.rs
src/world/: components.rs  ground.rs  loading.rs  mod.rs  model.rs  objects.rs  queries.rs  registry.rs  solid.rs  visualizer.rs
