[package]
name = "termdash"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy_ratatui = "0.10.0"
bevy_ratatui_camera = "0.16.0"
crossterm = "0.28.1"
lewton = "0.10.2"
ratatui = "0.29.0"
ratatui-widgets = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"

# perf
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
